# mpl-trifle

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE  pnpm-lock.yaml
.github/: file-filters.yml
clients/cli/: package.json
clients/js/: README.md  package.json  pnpm-lock.yaml
clients/js-solita/: tsconfig.build.json
clients/js-solita/idl/: mpl_trifle.json
clients/js/src/: plugin.ts
clients/js/test/: _setup.ts
clients/migrator/: package.json
configs/: kinobi.cjs  shank.cjs  validator.cjs  validator.devnet.cjs  validator.mainnet.cjs
idls/: mpl_trifle.json
js/: .prettierrc.js  package.json
js/idl/: mpl_trifle.json
js/src/: transfer-effects.ts
program/: Cargo.toml
program/src/instruction/: mod.rs
programs/trifle/: Cargo.toml
programs/trifle/src/: error.rs  util.rs
programs/trifle/src/instruction/: mod.rs
programs/trifle/src/instruction/constraint_model/: add_collection_constraint.rs  add_none_constraint.rs  create.rs  remove_constraint.rs
programs/trifle/src/instruction/royalties/: set.rs  withdraw.rs
programs/trifle/src/instruction/trifle/: create.rs  transfer_in.rs  transfer_out.rs
programs/trifle/src/processor/constraint_model/: add_collection_constraint.rs  create.rs  remove_constraint.rs
programs/trifle/src/processor/royalties/: mod.rs  set.rs  withdraw.rs
programs/trifle/src/processor/trifle/: mod.rs  transfer_in.rs  transfer_out.rs
programs/trifle/src/state/: escrow_constraints.rs
programs/trifle/src/tests/: state.rs
programs/trifle/tests/utils/: edition_marker.rs  master_edition_v2.rs  metadata.rs  mod.rs
(+18 files in other folders)
