[package]
name = "mpl-trifle"
version = "0.5.3"
description = "Metaplex Composability Program"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-trifle"
license-file = "../../LICENSE"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.3"
shank = "0.0.12"
solana-program = "~1.14.18"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "~1.1.2", features = [
    "no-entrypoint",
] }
thiserror = "1.0.35"
mpl-utils = "0.2.0"
mpl-token-metadata = { version = "1.8.5", features = ["no-entrypoint"] }
num-derive = "0.3.3"
num-traits = "0.2.14"
modular-bitfield = "0.11.2"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"

[dev-dependencies]
solana-sdk = "~1.14.18"
solana-program-test = "~1.14.18"

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
